objects/ssot__SalesTerritoryAccountProdtMsgScore__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Sales Territory Acct Prod Msg Score Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductGuidanceId__c</fullName>
        <label>Product Guidance</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductRecordId__c</fullName>
        <label>Product Record</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductRecordObject__c</fullName>
        <label>Product Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RankNumber__c</fullName>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SalesTerritoryId__c</fullName>
        <label>Sales Territory</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScoreExplainabilityInfoText__c</fullName>
        <label>Score Explainability Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScoreOriginName__c</fullName>
        <label>Score Origin Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalScoreNumber__c</fullName>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800777446_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesTerritoryAccountProdtMsgScore_P_rel</label>
        <referenceTo>ssot__ProductGuidance__dlm</referenceTo>
        <relationshipLabel>SalesTerritoryAccountProdtMsgScore_P_rel</relationshipLabel>
        <relationshipName>rel_1752800777446_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800781173_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesTerritoryAccountProdtMsgScore_P_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>SalesTerritoryAccountProdtMsgScore_P_rel</relationshipLabel>
        <relationshipName>rel_1752800781173_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800782934_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesTerritoryAccountProdtMsgScore_P_rel</label>
        <referenceTo>ssot__LifeScienceMarketableProduct__dlm</referenceTo>
        <relationshipLabel>SalesTerritoryAccountProdtMsgScore_P_rel</relationshipLabel>
        <relationshipName>rel_1752800782934_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>